keep on truckin

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -71,7 +71,7 @@ win_machine_build_task:
     - cmake --build . -v --config Release
     - cmake --install .
     - cd ..
-    - - cmake -E copy __build\Release\rtaudio.lib C:/lib
+    - cmake -E copy __build\Release\rtaudio.lib C:/lib
     - del __build /S /Q # Remove the generated files, so they aren't cached
 
   build_script:
