--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ screen.cpp
 chronicle.cpp
 )
 
-target_link_directories(chronicle PRIVATE C:/lib)
+target_link_directories(chronicle PRIVATE C:/lib/)
 
 IF (UNIX AND NOT WIN32)
     include_directories(/usr/include/rtaudio)
@@ -68,7 +68,8 @@ endif()
 # RTAUDIO #
 ###########
 
-find_library(RTAUDIO_LIB NAMES rtaudio rtaudio.lib)
+find_library(RTAUDIO_LIB NAMES rtaudio rtaudio.lib rtaudio.dll
+HINTS "C:/lib/)
 if (RTAUDIO_LIB OR rtaudio_FOUND)
     message(STATUS "Found RtAudio: ${RTAUDIO_LIB}")
 else()
