--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -72,6 +72,9 @@ win_machine_build_task:
     - cmake --install .
     - cd ..
     - cmake -E copy __build\Release\rtaudio.lib C:/lib
+    - cmake -E make_directory C:/include
+    - cmake -E copy ./*.cpp C:/include
+    - cmake -E copy ./*.h C:/include
     - del __build /S /Q # Remove the generated files, so they aren't cached
 
   build_script:
