--- a/.ci/Dockerfile.x86
+++ b/.ci/Dockerfile.x86
@@ -1,11 +1,24 @@
 FROM cirrusci/windowsservercore:cmake
 
 RUN choco upgrade -y visualstudio2017community visualstudio2017-workload-vctools
-RUN choco install -y visualstudio2017-workload-nativedesktop make aria2 7zip
+# RUN choco install -y visualstudio2017-workload-nativedesktop 
+RUN choco install -y aria2 7zip
+
 WORKDIR C:/
+RUN cmake -E make_directory C:/lib
+RUN cmake -E make_directory C:/include
 
 RUN git clone https://github.com/Microsoft/vcpkg.git
 WORKDIR vcpkg
 RUN .\bootstrap-vcpkg.bat
 RUN .\vcpkg integrate install
-RUN .\vcpkg install libsndfile:x86-windows libflac:x86-windows libvorbis:x86-windows libogg:x86-windows spdlog:x86-windows boost-filesystem:x86-windows boost-program-options:x86-windows pdcurses:x86-windows
+RUN .\vcpkg install libsndfile:x86-windows libflac:x86-windows libvorbis:x86-windows libogg:x86-windows spdlog:x86-windows boost-filesystem:x86-windows boost-program-options:x86-windows
+
+WORKDIR C:/
+RUN git clone https://github.com/wmcbrine/PDCurses
+WORKDIR C:/PDCurses/wincon
+RUN nmake -f Makefile.vc UTF8=Y WIDE=y
+RUN cmake -E copy curses.h C:/include
+RUN cmake -E copy panel.h C:/include
+RUN cmake -E copy curspriv.h C:/include
+RUN cmake -E copy pdcurses.lib C:/lib
