--- a/.ci/Dockerfile.x86
+++ b/.ci/Dockerfile.x86
@@ -17,6 +17,8 @@ RUN .\vcpkg install libsndfile:x86-windows libflac:x86-windows libvorbis:x86-win
 WORKDIR C:/
 RUN git clone https://github.com/wmcbrine/PDCurses
 WORKDIR C:/PDCurses/wincon
+# This is run as a SHELL command, otherwise the spaces are not properly escaped.
+# The VsDevCmd script and the nmake command are run together - the script sets up the path to nmake
 SHELL ["C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/Common7/Tools/VsDevCmd.bat -arch=x64; nmake -f Makefile.vc UTF8=Y WIDE=y"]
 RUN cmake -E copy curses.h C:/include
 RUN cmake -E copy panel.h C:/include
