--- a/.ci/Dockerfile.x86
+++ b/.ci/Dockerfile.x86
@@ -8,19 +8,19 @@ WORKDIR C:/
 RUN cmake -E make_directory C:/lib
 RUN cmake -E make_directory C:/include
 
+RUN git clone https://github.com/wmcbrine/PDCurses
+WORKDIR C:/PDCurses/wincon
+# This is run as a SHELL command, otherwise the spaces are not properly escaped.
+# The VsDevCmd script and the nmake command are run together - the script sets up the path to nmake
+RUN ["C:/Program\ Files\ (x86)/Microsoft\ Visual\ Studio/2017/Community/Common7/Tools/VsDevCmd.bat -arch=x86;", "nmake -f Makefile.vc UTF8=Y WIDE=y"]
+RUN cmake -E copy curses.h C:/include
+RUN cmake -E copy panel.h C:/include
+RUN cmake -E copy curspriv.h C:/include
+RUN cmake -E copy pdcurses.lib C:/lib
+
+WORKDIR C:/
 RUN git clone https://github.com/Microsoft/vcpkg.git
 WORKDIR vcpkg
 RUN .\bootstrap-vcpkg.bat
 RUN .\vcpkg integrate install
 RUN .\vcpkg install libsndfile:x86-windows libflac:x86-windows libvorbis:x86-windows libogg:x86-windows spdlog:x86-windows boost-filesystem:x86-windows boost-program-options:x86-windows
-
-WORKDIR C:/
-RUN git clone https://github.com/wmcbrine/PDCurses
-WORKDIR C:/PDCurses/wincon
-# This is run as a SHELL command, otherwise the spaces are not properly escaped.
-# The VsDevCmd script and the nmake command are run together - the script sets up the path to nmake
-SHELL ['"C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/Common7/Tools/VsDevCmd.bat -arch=x64"; nmake -f Makefile.vc UTF8=Y WIDE=y']
-RUN cmake -E copy curses.h C:/include
-RUN cmake -E copy panel.h C:/include
-RUN cmake -E copy curspriv.h C:/include
-RUN cmake -E copy pdcurses.lib C:/lib
