--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,8 +22,7 @@ win_machine_build_task:
       - git clone https://github.com/wmcbrine/PDCurses
       - cd PDCurses/wincon
       - set VSCMD_DEBUG=1
-      - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat" -arch=%BITNESS%'
-      - nmake -f Makefile.vc UTF8=Y WIDE=y
+      - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat" -arch=%BITNESS%'; nmake -f Makefile.vc UTF8=Y WIDE=y
       - cmake -E copy curses.h C:/include
       - cmake -E copy panel.h C:/include
       - cmake -E copy curspriv.h C:/include
