--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -80,7 +80,7 @@ win_machine_build_task:
     - cat "__build/CMakeFiles/CMakeOutput.log"
 
   package_artifacts:
-    path: __build
+    path: __build/Release
 # publish_task:
 #   container:
 #     image: gcc:latest
