--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,22 +17,24 @@ win_machine_build_task:
 
   curses_download_cache:
     folder: PDCurses/wincon
-    fingerprint_script: echo pdcurses-fingerprint-0
+    fingerprint_script: echo pdcurses-fingerprint-1
     populate_script:
       - git clone https://github.com/wmcbrine/PDCurses
-      - cd PDCurses/wincon
-      - set VSCMD_DEBUG=1
-      - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat" -arch=%BITNESS%'
-      - nmake -f Makefile.vc UTF8=Y WIDE=y
-      - cmake -E copy ../curses.h C:/include
-      - cmake -E copy ../panel.h C:/include
-      - cmake -E copy ../curspriv.h C:/include
-      - cmake -E copy pdcurses.lib C:/lib
-      - nmake -f Makefile.vc clean # Remove the generated files, so they aren't cached
+
+  curses_build_script:
+    - cd PDCurses/wincon
+    - set VSCMD_DEBUG=1
+    - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat" -arch=%BITNESS%'
+    - nmake -f Makefile.vc UTF8=Y WIDE=y
+    - cmake -E copy ../curses.h C:/include
+    - cmake -E copy ../panel.h C:/include
+    - cmake -E copy ../curspriv.h C:/include
+    - cmake -E copy pdcurses.lib C:/lib
+    - nmake -f Makefile.vc clean # Remove the generated files, so they aren't cached
 
   lame_download_cache:
     folder: lame-3.100
-    fingerprint_script: echo lame-3.100-fingerprint-0
+    fingerprint_script: echo lame-3.100-fingerprint-1
     populate_script:
       - aria2c https://netix.dl.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz
       - 7z x lame-3.100.tar.gz
