--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -42,7 +42,7 @@ win_machine_build_task:
       - cd lame-3.100
       - ps: ((Get-Content -path .\Makefile.MSVC -Raw) -replace '/machine:I386','/machine:X64') | Set-Content -path .\Makefile.MSVCx64 # Setup for x64
       - cmake -E copy Makefile.MSVC Makefile.MSVCx86
-      - cmake -E copy configMS.h config.h /y
+      - cmake -E copy configMS.h config.h
 
   lame_build_script:
     - cd lame-3.100
