nmake clean before uploading cache

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -51,6 +51,7 @@ win_machine_build_task:
     - nmake -f Makefile.MSVC%BITNESS% comp=msvc asm=no DLL /D
     - cmake -E copy output\libmp3lame.dll C:/lib
     - cmake -E copy output\libmp3lame-static.lib C:/lib
+    - nmake -f Makefile.MSVC%BITNESS% comp=msvc asm=no clean /D
     - cmake -E remove_directory output # Remove the generated files, so they aren't cached
 
   rtaudio_download_cache:
