dynamic link against rtaudio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ endif()
 # RTAUDIO #
 ###########
 
-find_library(RTAUDIO_LIB NAMES rtaudio rtaudio.lib rtaudio.dll
+find_library(RTAUDIO_LIB NAMES rtaudio rtaudio.dll
 HINTS "C:/lib/")
 if (RTAUDIO_LIB OR rtaudio_FOUND)
     message(STATUS "Found RtAudio: ${RTAUDIO_LIB}")
