--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -70,6 +70,7 @@ win_machine_build_task:
     - cmake --install .
     - cd ..
     - cmake -E copy __build\Release\rtaudio.lib C:/lib
+    - cmake -E copy __build\Release\rtaudio.dll C:/lib
     - cmake -E copy ./RtAudio.cpp C:/include
     - cmake -E copy RtAudio.h C:/include
     - cmake -E remove_directory __build # Remove the generated files, so they aren't cached
