--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -77,6 +77,9 @@ win_machine_build_task:
     - cmake -E make_directory __build && cd __build
     - cmake -G "%GENERATOR_STRING%" .. -DCMAKE_TOOLCHAIN_FILE=C:\vcpkg\scripts\buildsystems\vcpkg.cmake -DVCPKG_TARGET_TRIPLET=%BITNESS%-windows --debug-output
     - cmake --build . -v --config Release
+    - aria2c https://github.com/lucasg/Dependencies/releases/download/v1.9/Dependencies_x64_Release.zip
+    - 7z x Dependencies_x64_Release.zip
+    - ps: Dependencies_x64_Release/Dependencies.exe -chain ./Release/chronicle.exe | Select-String -Pattern "\.*.dll" -Exclude "system32" | Select-String -Pattern "WINDOWS" -SimpleMatch -NotMatch
   on_failure:
     - cat "__build/CMakeFiles/CMakeOutput.log"
 
