--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -68,6 +68,7 @@ win_machine_build_task:
     - cmake --build . -v --config Release
     - cmake --install .
     - cd ..
+    - cmake -E copy __build\Release\rtaudio.lib C:/lib
     - cmake -E copy __build\Release\rtaudio.dll C:/lib
     - cmake -E copy ./RtAudio.cpp C:/include
     - cmake -E copy RtAudio.h C:/include
