Explicitly copy rtaudio dll in

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -68,7 +68,7 @@ win_machine_build_task:
     - cmake --build . -v --config Release
     - cmake --install .
     - cd ..
-    # - cmake -E copy __build\Release\rtaudio.lib C:/lib
+    - cmake -E copy __build\Release\rtaudio.lib C:/lib
     - cmake -E copy __build\Release\rtaudio.dll C:/lib
     - cmake -E copy ./RtAudio.cpp C:/include
     - cmake -E copy RtAudio.h C:/include
@@ -81,7 +81,7 @@ win_machine_build_task:
     # - aria2c https://github.com/lucasg/Dependencies/releases/download/v1.9/Dependencies_x64_Release.zip
     # - 7z x Dependencies_x64_Release.zip
     # - ps: ./Dependencies.exe -chain ./Release/chronicle.exe | Select-String -Pattern "\.*.dll" -Exclude "system32" | Select-String -Pattern "WINDOWS" -SimpleMatch -NotMatch
-    # - cmake -E copy C:/lib/rtaudio.dll Release/
+    - cmake -E copy C:/lib/rtaudio.dll Release/
   on_failure:
     - cat "__build/CMakeFiles/CMakeOutput.log"
 
