--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -81,7 +81,7 @@ win_machine_build_task:
     - cmake -E copy C:/lib/rtaudio.dll Release/
 
   dist_script:
-    - ./__build/Release/chronicle.exe --version > ver.txt
+    - \__build\Release\chronicle.exe --version > ver.txt
     - set /P CHRONICLE_VER=<ver.txt
     - cmake -E rename __build/Release chronicle-win%BITNESS%-%CHRONICLE_VER%
     - 7z a chronicle-win%BITNESS%-%CHRONICLE_VER%.zip __build/Release chronicle-win%BITNESS%-%CHRONICLE_VER%/*
