--- a/.ci/Dockerfile.x86
+++ b/.ci/Dockerfile.x86
@@ -1,7 +1,7 @@
 FROM cirrusci/windowsservercore:cmake
 
 RUN choco upgrade -y visualstudio2017community visualstudio2017-workload-vctools
-RUN choco install -y visualstudio2017-workload-nativedesktop aria2 7zip
+RUN choco install -y visualstudio2017-workload-nativedesktop aria2 7zip vcredist2017
 
 WORKDIR C:/
 RUN cmake -E make_directory C:/lib
