--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -84,4 +84,4 @@ win_machine_build_task:
     - 7z a chronicle-win%BITNESS%.zip __build/Release/*
 
   package_artifacts:
-    path: ./*
+    path: chronicle-win*
