--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,42 +4,7 @@ env:
 
 linux_build_task:
   container:
-    image: gcc:latest
-
-  apt_script:
-    - apt-get update -qq
-    - apt-get install libncurses5-dev libsndfile1-dev libasound2 libasound2-dev libflac-dev libvorbis-dev libogg-dev git build-essential python libtool libtool-bin wget libmp3lame-dev librtaudio-dev zip -qq -y
-
-  submodules_script: git submodule sync --recursive && git submodule update --init --recursive
-
-  cmake_cache:
-    folder: cmake-3.15.2-Linux-x86_64
-    populate_script:
-      - wget https://github.com/Kitware/CMake/releases/download/v3.15.2/cmake-3.15.2-Linux-x86_64.tar.gz
-      - tar xf cmake-3.15.2-Linux-x86_64.tar.gz
-
-  cmake_install_script: cp -r cmake-3.15.2-Linux-x86_64/* /
-
-  boost_build_script:
-    - wget https://dl.bintray.com/boostorg/release/1.68.0/source/boost_1_68_0.tar.gz
-    - tar xf boost_1_68_0.tar.gz
-    - cd boost_1_68_0
-    - ./bootstrap.sh --with-libraries=system,filesystem,program_options
-    - ./b2 install
-
-  spdlog_download_cache:
-    folder: spdlog-1.3.1
-    fingerprint_script: echo $CIRRUS_OS-$CIRRUS_TASK_NAME
-    populate_script:
-      - wget https://github.com/gabime/spdlog/archive/v1.3.1.tar.gz
-      - tar xf v1.3.1.tar.gz
-
-  spdlog_install_script:
-    - cd spdlog-1.3.1
-    - mkdir -p __build && cd __build
-    - cmake .. -DSPDLOG_BUILD_EXAMPLES=OFF -DSPDLOG_BUILD_BENCH=OFF -DSPDLOG_BUILD_TESTS=OFF
-    - make -j
-    - make install
+    dockerfile: .ci/Dockerfile.linux
 
   build_script:
     - mkdir -p __build
