--- a/.ci/Dockerfile.linux
+++ b/.ci/Dockerfile.linux
@@ -18,7 +18,8 @@ RUN wget https://github.com/gabime/spdlog/archive/v1.3.1.tar.gz
 RUN tar xf v1.3.1.tar.gz
 
 WORKDIR spdlog-1.3.1
-RUN mkdir -p __build && cd __build
+RUN mkdir -p __build
+WORKDIR  __build
 RUN cmake .. -DSPDLOG_BUILD_EXAMPLES=OFF -DSPDLOG_BUILD_BENCH=OFF -DSPDLOG_BUILD_TESTS=OFF
 RUN make -j
 RUN make install
