--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -104,7 +104,8 @@ win_build_task:
     - cmake -E copy README.md __build/Release/
     - cmake -E copy CHANGELOG.md __build/Release/
     - cd __build/Release/*
-    - 7z a chronicle-win%BITNESS%-%CIRRUS_BUILD_ID%.zip ./*
+    - tar..gz a chronicle-win%BITNESS%-%CIRRUS_BUILD_ID%.zip ./*
+    - tar..gz a chronicle-win%BITNESS%-%CIRRUS_BUILD_ID%.tar.gz ./*
 
   package_artifacts:
     path: ./__build/Release/*.zip
@@ -120,14 +121,18 @@ publish_task:
   publish_script:
     - apt update && apt install python python-pip -y
     - pip install b2
-    - wget https://api.cirrus-ci.com/v1/artifact/github/hcr923fm/chronicle/win_build/package/chronicle-winx86-${CIRRUS_BUILD_ID}.zip
-    - wget https://api.cirrus-ci.com/v1/artifact/github/hcr923fm/chronicle/win_build/package/chronicle-winx64-${CIRRUS_BUILD_ID}.zip
+    - wget https://api.cirrus-ci.com/v1/artifact/github/hcr923fm/chronicle/win_build/package/__build/Release/chronicle-winx86-${CIRRUS_BUILD_ID}.zip
+    - wget https://api.cirrus-ci.com/v1/artifact/github/hcr923fm/chronicle/win_build/package/__build/Release/chronicle-winx64-${CIRRUS_BUILD_ID}.zip
+    - wget https://api.cirrus-ci.com/v1/artifact/github/hcr923fm/chronicle/win_build/package/__build/Release/chronicle-winx86-${CIRRUS_BUILD_ID}.tar.gz
+    - wget https://api.cirrus-ci.com/v1/artifact/github/hcr923fm/chronicle/win_build/package/__build/Release/chronicle-winx64-${CIRRUS_BUILD_ID}.tar.gz
     - CHRONICLE_MAJOR_VERSION=`awk '/MAJOR/ {print $5}' ../version.h | sed 's/[^0-9]//g'`
     - CHRONICLE_MINOR_VERSION=`awk '/MINOR/ {print $5}' ../version.h | sed 's/[^0-9]//g'`
     - CHRONICLE_PATCH_VERSION=`awk '/PATCH/ {print $5}' ../version.h | sed 's/[^0-9]//g'`
     - CHRONICLE_VERSION=${CHRONICLE_MAJOR_VERSION}.${CHRONICLE_MINOR_VERSION}.${CHRONICLE_PATCH_VERSION}
     - mv chronicle-winx86.zip chronicle-${CHRONICLE_VERSION}-win32.zip
     - mv chronicle-winx64.zip chronicle-${CHRONICLE_VERSION}-win64.zip
+    - mv chronicle-winx86.tar.gz chronicle-${CHRONICLE_VERSION}-win32.tar.gz
+    - mv chronicle-winx64.tar.gz chronicle-${CHRONICLE_VERSION}-win64.tar.gz
     - chmod +x .ci/*.sh
     - b2 authorize-account $BACKBLAZE_APP_KEY_ID $BACKBLAZE_APP_KEY
     - .ci/chronicle-b2-upload.sh
