--- a/.ci/Dockerfile.winx86
+++ b/.ci/Dockerfile.winx86
@@ -13,3 +13,18 @@ WORKDIR vcpkg
 RUN .\bootstrap-vcpkg.bat
 RUN .\vcpkg integrate install
 RUN .\vcpkg install libsndfile:x86-windows libflac:x86-windows libvorbis:x86-windows libogg:x86-windows spdlog:x86-windows boost-filesystem:x86-windows boost-program-options:x86-windows
+
+WORKDIR C:/
+RUN aria2c https://netix.dl.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz
+RUN 7z x lame-3.100.tar.gz
+RUN 7z x lame-3.100.tar
+WORKDIR lame-3.100
+#RUN powershell.exe -Command "& ((Get-Content -path .\Makefile.MSVC -Raw) -replace '/machine:I386','/machine:X64') | Set-Content -path .\Makefile.MSVCx64" # Setup for x64
+RUN cmake -E copy Makefile.MSVC Makefile.MSVCx86
+RUN cmake -E copy configMS.h config.h
+ENV VSCMD_DEBUG=1
+RUN "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat" -arch=x86
+nmake -f Makefile.MSVCx86 comp=msvc asm=no DLL /D
+cmake -E copy output\libmp3lame.dll C:/lib
+cmake -E copy output\libmp3lame-static.lib C:/lib
+nmake -f Makefile.MSVCx86 comp=msvc asm=no clean /D
