--- a/.ci/Dockerfile.winx64
+++ b/.ci/Dockerfile.winx64
@@ -2,7 +2,7 @@ FROM cirrusci/windowsservercore:cmake
 
 RUN choco upgrade all -y
 #RUN choco upgrade -y visualstudio2017community visualstudio2017-workload-vctools
-RUN choco install -y aria2 vcredist2017
+RUN choco install -y aria2 vcredist2017 --ignoredetectedreboot -d
 
 WORKDIR C:/
 RUN cmake -E make_directory C:/lib
