--- a/.ci/Dockerfile.winx64
+++ b/.ci/Dockerfile.winx64
@@ -3,7 +3,7 @@ FROM cirrusci/windowsservercore:cmake
 RUN choco upgrade all -y
 #RUN choco upgrade -y visualstudio2017community visualstudio2017-workload-vctools
 RUN choco install -y visualstudio2019community vcredist2017 --ignoredetectedreboot -d
-RUN choco install -y aria2 --version 1.32.0.1
+RUN choco install -y aria2 --version 1.32.0.1 --ignoredetectedreboot --trace
 
 WORKDIR C:/
 RUN cmake -E make_directory C:/lib
