--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,21 +32,32 @@ endif()
 # SPDLOG #
 ##########
 
-add_compile_options(-DSPDLOG_COMPILED_LIB -D_WIN32_WINNT=0x600 -D_ISOC99_SOURCE -lole32 -lwinmm -ldsound -Wl,--trace,--as-needed)
+#add_compile_options(-DSPDLOG_COMPILED_LIB -D_WIN32_WINNT=0x600 -D_ISOC99_SOURCE -lole32 -lwinmm -ldsound -Wl,--trace,--as-needed)
 find_package(spdlog CONFIG REQUIRED)
+target_link_libraries(chronicle PRIVATE spdlog::spdlog)
+
+#find_package(fmt CONFIG REQUIRED)
 
 ##############
 # LIBMP3LAME #
 ##############
 
-find_library(LAME_LIB
-NAMES libmp3lame libmp3lame.a libmp3lame-static.lib libmp3lame.dll libmp3lame.lib lame_enc lame_enc.dll lame_enc.lib
-HINTS "C:/lib/") # For the Windows build - lib files are placed in the SOURCE/lib dir
+#find_library(LAME_LIB
+#NAMES libmp3lame libmp3lame.a libmp3lame-static.lib libmp3lame.dll libmp3lame.lib lame_enc lame_enc.dll lame_enc.lib) # For the Windows build - lib files are placed in the SOURCE/lib dir
+if(UNIX)
+    find_library(LAME_LIB NAMES libmp3lame libmp3lame.a libmp3lame-static.lib libmp3lame.dll libmp3lame.lib lame_enc lame_enc.dll lame_enc.lib)
+    if (LAME_LIB OR lame_FOUND)
+        message(STATUS "Found LAME: ${LAME_LIB}")
+        target_link_libraries(chronicle PRIVATE ${LAME_LIB})
+    else()
+        message(FATAL_ERROR "Could not find lame! Exiting...")
+    endif()
 
-if (LAME_LIB OR lame_FOUND)
-    message(STATUS "Found LAME: ${LAME_LIB}")
-else()
-    message(FATAL_ERROR "Could not find lame! Exiting...")
+endif()
+
+if(WIN32)
+    find_package(mp3lame CONFIG REQUIRED)
+    target_link_libraries(chronicle PRIVATE mp3lame::mp3lame)
 endif()
 
 ##############
@@ -57,12 +68,14 @@ if (UNIX)
     find_library(SNDFILE_LIB sndfile)
     if (SNDFILE_LIB OR sndfile_FOUND)
         message(STATUS "Found libsndfile")
+        target_link_libraries(chronicle PRIVATE ${SNDFILE_LIB})
     else()
         message(FATAL_ERROR "Could not find libsndfile! Exiting...")
     endif()
 endif()
 if (WIN32)
     find_package(SndFile CONFIG REQUIRED)
+    target_link_libraries(chronicle PRIVATE SndFile::sndfile)
 endif()
 
 ####################
@@ -72,12 +85,19 @@ endif()
 if (UNIX)
     find_library(CURSES_LIB ncurses)
 endif()
+
 if (WIN32)
-    find_library(CURSES_LIB NAMES pdcurses pdcurses.dll pdcurses.lib HINTS "C:/lib/")
+    if(PORT STREQUAL "pdcurses")
+        set(VCPKG_LIBRARY_LINKAGE static)
+    elseif()
+        set(VCPKG_LIBRARY_LINKAGE dynamic)
+    endif()
+    find_library(CURSES_LIB NAMES pdcurses.dll pdcurses.lib)
 endif()
 
 if (CURSES_LIB)
     message(STATUS "Found curses: ${CURSES_LIB}")
+    target_link_libraries(chronicle PRIVATE ${CURSES_LIB})
 else()
     message(FATAL_ERROR "Could not find curses! Exiting...")
 endif()
@@ -90,6 +110,8 @@ find_library(RTAUDIO_LIB NAMES rtaudio
 HINTS "C:/lib/")
 if (RTAUDIO_LIB OR rtaudio_FOUND)
     message(STATUS "Found RtAudio: ${RTAUDIO_LIB}")
+    target_link_libraries(chronicle PRIVATE ${RTAUDIO_LIB})
+
 else()
     message(FATAL_ERROR "Could not find RtAudio! Exiting...")
 endif()
@@ -110,6 +132,7 @@ if(Boost_FILESYSTEM_FOUND)
 else()
     message(FATAL_ERROR "Could not find the Boost filesystem component! Exiting...")
 endif()
+
 if(Boost_PROGRAM_OPTIONS_FOUND)
     message(STATUS "Found Boost program_options...")
     if (Boost_PROGRAM_OPTIONS_LIBRARY)
@@ -121,21 +144,4 @@ else()
     message(FATAL_ERROR "Could not find the Boost program_options component! Exiting...")
 endif()
 
-#############
-# CHRONICLE #
-#############
-
-if (WIN32)
-    target_link_libraries(chronicle PRIVATE SndFile::sndfile)
-endif()
-
-if(UNIX)
-    target_link_libraries(chronicle PRIVATE ${SNDFILE_LIB})
-endif()
-
-target_link_libraries(chronicle PRIVATE
-spdlog::spdlog
-${LAME_LIB}
-${RTAUDIO_LIB}
-${CURSES_LIB}
-${Boost_LIBRARIES})
+target_link_libraries(chronicle PRIVATE ${Boost_LIBRARIES})
