install cmake on choco

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,11 +87,11 @@ if (UNIX)
 endif()
 
 if (WIN32)
-    if(PORT STREQUAL "pdcurses")
-        set(VCPKG_LIBRARY_LINKAGE static)
-    elseif()
-        set(VCPKG_LIBRARY_LINKAGE dynamic)
-    endif()
+#    if(PORT STREQUAL "pdcurses")
+#        set(VCPKG_LIBRARY_LINKAGE static)
+#    elseif()
+#        set(VCPKG_LIBRARY_LINKAGE dynamic)
+#    endif()
     find_library(CURSES_LIB NAMES pdcurses.dll pdcurses.lib)
 endif()
 
