--- a/.ci/Dockerfile.winx86
+++ b/.ci/Dockerfile.winx86
@@ -3,7 +3,7 @@ FROM cirrusci/windowsservercore:cmake
 RUN choco upgrade all -y
 #RUN choco upgrade -y visualstudio2017community visualstudio2017-workload-vctools
 #RUN choco install -y visualstudio2019-workload-nativedesktop aria2 7zip vcredist2017
-RUN choco install -y visualstudio2019community vcredist2017 --ignoredetectedreboot -d
+RUN choco install -y visualstudio2019community vcredist2017 cmake visualstudio2019-workload-nativedesktop  --ignoredetectedreboot
 #RUN choco install -y aria2 --version 1.32.0.1
 #vcredist2017
 
